# mechgah

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  KeysConfig.txt  Makefile  README.md  doxyfile  main.c  unit_test  unit_test.c
doxygen/html/: _n_r_o_m_data_8h_source.html  _u_test_8h_source.html  annotated.html  app_8h.html  app_8h__incl.map  app_8h__incl.md5  app_8h_source.html  classes.html  const_8h.html  const_8h_source.html  controller_8h.html  controller_8h__dep__incl.map  controller_8h__dep__incl.md5  controller_8h__incl.map  controller_8h__incl.md5  controller_8h_source.html  cpu_8h.html  cpu_8h__dep__incl.map  cpu_8h__dep__incl.md5  cpu_8h__incl.map  cpu_8h__incl.md5  cpu_8h_source.html  dir_000002_000001.html  dir_000003_000001.html  dir_000003_000006.html  dir_000004_000001.html  dir_000004_000006.html  dir_000005_000001.html  dir_000005_000006.html  dir_000006_000001.html  dir_000006_000003.html  dir_000006_000004.html  dir_000006_000005.html  dir_000006_000007.html  dir_000007_000001.html  dir_000007_000006.html  dir_000008_000001.html  dir_000008_000002.html  dir_1e6be3dc8caa3521f37dc9e94ca6b16d.html  dir_1e6be3dc8caa3521f37dc9e94ca6b16d_dep.map  (+121 more)
doxygen/latex/: annotated.tex  app_8h.tex  app_8h__incl.md5  const_8h.tex  controller_8h.tex  controller_8h__dep__incl.md5  controller_8h__incl.md5  cpu_8h.tex  cpu_8h__dep__incl.md5  cpu_8h__incl.md5  dir_1e6be3dc8caa3521f37dc9e94ca6b16d.tex  dir_1e6be3dc8caa3521f37dc9e94ca6b16d_dep.md5  (+69 more)
include/: cpu.h  instructions.h  nrom.h  peripheralRegister.h
reunions/: cr-reunion-31-01-19.md
src/: app.c  app.h  loader.h
(+164 files in other folders)
